<resources>
    <string name="app_name">Mail composer</string>
    <string name="activity_composer_from_label">From:</string>
    <string name="activity_composer_from_text">xhunter74@gmail.com</string>
    <string name="activity_composer_to_label">To:</string>
    <string name="activity_composer_subject_label">Subject:</string>
    <string name="activity_composer_attachments_label">Attachments:</string>
    <string name="activity_composer_to_hint">Enter recipient(s)</string>
    <string name="activity_composer_subject_hint">Enter subject</string>
    <string name="activity_composer_body_hint">Enter letter text</string>
    <string name="composer_activity_google_play_services_warning">Google Play Services required: after installing, close and relaunch this app.</string>
    <string name="composer_activity_account_unspecified">Account unspecified.</string>
    <string name="composer_activity_no_network_connection_message">No network connection available.</string>
    <string name="composer_activity_from_address_empty_error">Field from can not be empty.</string>
    <string name="composer_activity_recipient_address_error">Field can not be empty.</string>
    <string name="composer_activity_progress_dialog_message">Sending email using Gmail API …</string>
    <string name="composer_activity_exception_message">The following error occurred:\n%s</string>
    <string name="composer_activity_email_send_successfully">Email was sent successfully.</string>
    <string name="action_send">Send email</string>
    <string name="activity_composer_attachments">%d attachment(s)</string>
    <string name="dialog_attachments_title">Attachments</string>
    <string name="composer_activity_file_doesnt_exist_message">File %s does not exist.</string>
    <string name="action_add_attachment">Add attachment</string>
    <string name="composer_activity_existed_attachment_warning">This file already exist in the attachment.</string>
    <string name="composer_activity_recipient_address_invalid_email">Incorrect email(s)</string>
</resources>
